crates/vectorscan-sys/src/bindings.rs

/* automatically generated by rust-bindgen 0.69.4 */

pub const HS_VERSION_STRING: &[u8; 18] = b"5.4.11 2024-03-06\0";
pub const HS_VERSION_32BIT: u32 = 84151040;
pub const HS_MAJOR: u32 = 5;
pub const HS_MINOR: u32 = 4;
pub const HS_PATCH: u32 = 11;
pub const HS_SUCCESS: u32 = 0;
pub const HS_INVALID: i32 = -1;
pub const HS_NOMEM: i32 = -2;
pub const HS_SCAN_TERMINATED: i32 = -3;
pub const HS_COMPILER_ERROR: i32 = -4;
pub const HS_DB_VERSION_ERROR: i32 = -5;
pub const HS_DB_PLATFORM_ERROR: i32 = -6;
pub const HS_DB_MODE_ERROR: i32 = -7;
pub const HS_BAD_ALIGN: i32 = -8;
pub const HS_BAD_ALLOC: i32 = -9;
pub const HS_SCRATCH_IN_USE: i32 = -10;
pub const HS_ARCH_ERROR: i32 = -11;
pub const HS_INSUFFICIENT_SPACE: i32 = -12;
pub const HS_UNKNOWN_ERROR: i32 = -13;
pub const HS_EXT_FLAG_MIN_OFFSET: u32 = 1;
pub const HS_EXT_FLAG_MAX_OFFSET: u32 = 2;
pub const HS_EXT_FLAG_MIN_LENGTH: u32 = 4;
pub const HS_EXT_FLAG_EDIT_DISTANCE: u32 = 8;
pub const HS_EXT_FLAG_HAMMING_DISTANCE: u32 = 16;
pub const HS_FLAG_CASELESS: u32 = 1;
pub const HS_FLAG_DOTALL: u32 = 2;
pub const HS_FLAG_MULTILINE: u32 = 4;
pub const HS_FLAG_SINGLEMATCH: u32 = 8;
pub const HS_FLAG_ALLOWEMPTY: u32 = 16;
pub const HS_FLAG_UTF8: u32 = 32;
pub const HS_FLAG_UCP: u32 = 64;
pub const HS_FLAG_PREFILTER: u32 = 128;
pub const HS_FLAG_SOM_LEFTMOST: u32 = 256;
pub const HS_FLAG_COMBINATION: u32 = 512;
pub const HS_FLAG_QUIET: u32 = 1024;
pub const HS_CPU_FEATURES_AVX2: u32 = 4;
pub const HS_CPU_FEATURES_AVX512: u32 = 8;
pub const HS_CPU_FEATURES_AVX512VBMI: u32 = 16;
pub const HS_TUNE_FAMILY_GENERIC: u32 = 0;
pub const HS_TUNE_FAMILY_SNB: u32 = 1;
pub const HS_TUNE_FAMILY_IVB: u32 = 2;
pub const HS_TUNE_FAMILY_HSW: u32 = 3;
pub const HS_TUNE_FAMILY_SLM: u32 = 4;
pub const HS_TUNE_FAMILY_BDW: u32 = 5;
pub const HS_TUNE_FAMILY_SKL: u32 = 6;
pub const HS_TUNE_FAMILY_SKX: u32 = 7;
pub const HS_TUNE_FAMILY_GLM: u32 = 8;
pub const HS_TUNE_FAMILY_ICL: u32 = 9;
pub const HS_TUNE_FAMILY_ICX: u32 = 10;
pub const HS_MODE_BLOCK: u32 = 1;
pub const HS_MODE_NOSTREAM: u32 = 1;
pub const HS_MODE_STREAM: u32 = 2;
pub const HS_MODE_VECTORED: u32 = 4;
pub const HS_MODE_SOM_HORIZON_LARGE: u32 = 16777216;
pub const HS_MODE_SOM_HORIZON_MEDIUM: u32 = 33554432;
pub const HS_MODE_SOM_HORIZON_SMALL: u32 = 67108864;
pub const HS_OFFSET_PAST_HORIZON: i32 = -1;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct hs_database {
    _unused: [u8; 0],
}
#[doc = " A Hyperscan pattern database.\n\n Generated by one of the Hyperscan compiler functions:\n  - @ref hs_compile()\n  - @ref hs_compile_multi()\n  - @ref hs_compile_ext_multi()"]
pub type hs_database_t = hs_database;
#[doc = " A type for errors returned by Hyperscan functions."]
pub type hs_error_t = ::std::os::raw::c_int;
extern "C" {
    #[doc = " Free a compiled pattern database.\n\n The free callback set by @ref hs_set_database_allocator() (or @ref\n hs_set_allocator()) will be used by this function.\n\n @param db\n      A compiled pattern database. NULL may also be safely provided, in which\n      case the function does nothing.\n\n @return\n      @ref HS_SUCCESS on success, other values on failure."]
    pub fn hs_free_database(db: *mut hs_database_t) -> hs_error_t;
}
extern "C" {
    #[doc = " Serialize a pattern database to a stream of bytes.\n\n The allocator callback set by @ref hs_set_misc_allocator() (or @ref\n hs_set_allocator()) will be used by this function.\n\n @param db\n      A compiled pattern database.\n\n @param bytes\n      On success, a pointer to an array of bytes will be returned here.\n      These bytes can be subsequently relocated or written to disk. The\n      caller is responsible for freeing this block.\n\n @param length\n      On success, the number of bytes in the generated byte array will be\n      returned here.\n\n @return\n      @ref HS_SUCCESS on success, @ref HS_NOMEM if the byte array cannot be\n      allocated, other values may be returned if errors are detected."]
    pub fn hs_serialize_database(
        db: *const hs_database_t,
        bytes: *mut *mut ::std::os::raw::c_char,
        length: *mut usize,
    ) -> hs_error_t;
}
extern "C" {
    #[doc = " Reconstruct a pattern database from a stream of bytes previously generated\n by @ref hs_serialize_database().\n\n This function will allocate sufficient space for the database using the\n allocator set with @ref hs_set_database_allocator() (or @ref\n hs_set_allocator()); to use a pre-allocated region of memory, use the @ref\n hs_deserialize_database_at() function.\n\n @param bytes\n      A byte array generated by @ref hs_serialize_database() representing a\n      compiled pattern database.\n\n @param length\n      The length of the byte array generated by @ref hs_serialize_database().\n      This should be the same value as that returned by @ref\n      hs_serialize_database().\n\n @param db\n      On success, a pointer to a newly allocated @ref hs_database_t will be\n      returned here. This database can then be used for scanning, and\n      eventually freed by the caller using @ref hs_free_database().\n\n @return\n      @ref HS_SUCCESS on success, other values on failure."]
    pub fn hs_deserialize_database(
        bytes: *const ::std::os::raw::c_char,
        length: usize,
        db: *mut *mut hs_database_t,
    ) -> hs_error_t;
}
extern "C" {
    #[doc = " Reconstruct a pattern database from a stream of bytes previously generated\n by @ref hs_serialize_database() at a given memory location.\n\n This function (unlike @ref hs_deserialize_database()) will write the\n reconstructed database to the memory location given in the @p db parameter.\n The amount of space required at this location can be determined with the\n @ref hs_serialized_database_size() function.\n\n @param bytes\n      A byte array generated by @ref hs_serialize_database() representing a\n      compiled pattern database.\n\n @param length\n      The length of the byte array generated by @ref hs_serialize_database().\n      This should be the same value as that returned by @ref\n      hs_serialize_database().\n\n @param db\n      Pointer to an 8-byte aligned block of memory of sufficient size to hold\n      the deserialized database. On success, the reconstructed database will\n      be written to this location. This database can then be used for pattern\n      matching. The user is responsible for freeing this memory; the @ref\n      hs_free_database() call should not be used.\n\n @return\n      @ref HS_SUCCESS on success, other values on failure."]
    pub fn hs_deserialize_database_at(
        bytes: *const ::std::os::raw::c_char,
        length: usize,
        db: *mut hs_database_t,
    ) -> hs_error_t;
}
extern "C" {
    #[doc = " Provides the size of the stream state allocated by a single stream opened\n against the given database.\n\n @param database\n      Pointer to a compiled (streaming mode) pattern database.\n\n @param stream_size\n      On success, the size in bytes of an individual stream opened against the\n      given database is placed in this parameter.\n\n @return\n      @ref HS_SUCCESS on success, other values on failure."]
    pub fn hs_stream_size(database: *const hs_database_t, stream_size: *mut usize) -> hs_error_t;
}
extern "C" {
    #[doc = " Provides the size of the given database in bytes.\n\n @param database\n      Pointer to compiled pattern database.\n\n @param database_size\n      On success, the size of the compiled database in bytes is placed in this\n      parameter.\n\n @return\n      @ref HS_SUCCESS on success, other values on failure."]
    pub fn hs_database_size(
        database: *const hs_database_t,
        database_size: *mut usize,
    ) -> hs_error_t;
}
extern "C" {
    #[doc = " Utility function for reporting the size that would be required by a\n database if it were deserialized.\n\n This can be used to allocate a shared memory region or other \"special\"\n allocation prior to deserializing with the @ref hs_deserialize_database_at()\n function.\n\n @param bytes\n      Pointer to a byte array generated by @ref hs_serialize_database()\n      representing a compiled pattern database.\n\n @param length\n      The length of the byte array generated by @ref hs_serialize_database().\n      This should be the same value as that returned by @ref\n      hs_serialize_database().\n\n @param deserialized_size\n      On success, the size of the compiled database that would be generated\n      by @ref hs_deserialize_database_at() is returned here.\n\n @return\n      @ref HS_SUCCESS on success, other values on failure."]
    pub fn hs_serialized_database_size(
        bytes: *const ::std::os::raw::c_char,
        length: usize,
        deserialized_size: *mut usize,
    ) -> hs_error_t;
}
extern "C" {
    #[doc = " Utility function providing information about a database.\n\n @param database\n      Pointer to a compiled database.\n\n @param info\n      On success, a string containing the version and platform information for\n      the supplied database is placed in the parameter. The string is\n      allocated using the allocator supplied in @ref hs_set_misc_allocator()\n      (or malloc() if no allocator was set) and should be freed by the caller.\n\n @return\n      @ref HS_SUCCESS on success, other values on failure."]
    pub fn hs_database_info(
        database: *const hs_database_t,
        info: *mut *mut ::std::os::raw::c_char,
    ) -> hs_error_t;
}
extern "C" {
    #[doc = " Utility function providing information about a serialized database.\n\n @param bytes\n      Pointer to a serialized database.\n\n @param length\n      Length in bytes of the serialized database.\n\n @param info\n      On success, a string containing the version and platform information\n      for the supplied serialized database is placed in the parameter. The\n      string is allocated using the allocator supplied in @ref\n      hs_set_misc_allocator() (or malloc() if no allocator was set) and\n      should be freed by the caller.\n\n @return\n      @ref HS_SUCCESS on success, other values on failure."]
    pub fn hs_serialized_database_info(
        bytes: *const ::std::os::raw::c_char,
        length: usize,
        info: *mut *mut ::std::os::raw::c_char,
    ) -> hs_error_t;
}
